# FileSync

./: CMakeLists.txt  data.json  json.h  main.cc  readme.md  watcher.h
destination/: file1.txt  file2.txt  selam.txt
source/: file1.txt  file2.txt  hey.txt  source.txt
src/: data.json  json.h  main.cc  parser.h  watcher.h
